src/css/components/header-buttons-mobile.css
.mobile-buttons {
  grid-column: 4 / 7;
  -ms-grid-column-align: end;
  margin-left: auto;
  display: flex;

  @media (--sm) {
    align-self: end;
  }

  @media (--grid-lg) {
    grid-column: 12 / 15;
  }

  @media (--nav) {
    display: none;
  }
}

.mobile-buttons__divider {
  display: none;
  width: 2px;
  background-color: #D7E1E8;

  @media (--nav-md) {
    display: block;
    margin-left: calc(0.5 * var(--sp));
  }
}

