Fix mobile button alignment.

--- a/src/css/components/header-buttons-mobile.css
+++ b/src/css/components/header-buttons-mobile.css
@@ -9,7 +9,7 @@
   }
 
   @media (--grid-lg) {
-    grid-column: 12 / 15;
+    grid-column: 11 / 15;
   }
 
   @media (--nav) {
